# x_multi_agent

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  x.pc.in  xConfig.cmake.in
Vocabulary/: thermal_voc_3_4_dbow3_calib.yaml  visual_voc_3_4_dbow3.yaml
include/x/camera_models/: camera.h  camera_equidistant.h  camera_fov.h  camera_model.h  camera_none.h  camera_radtan.h  types.h
include/x/common/: message_queue.h  types.h
include/x/ekf/: ci.h  ekf.h  propagator.h  simple_state.h  state.h  state_buffer.h  updater.h
include/x/photometric_calibration/: gaussian_process_regression.h  gaussian_process_regression.hxx  irPhotoCalib.h  photoetricOptimization.h
include/x/place_recognition/: database.h  keyframe.h  place_recognition.h  types.h  vlad.h
include/x/vio/: msckf_slam_update.h  msckf_update.h  multi_slam_update.h  state_manager.h  track_manager.h  types.h  update.h  vio.h  vio_updater.h
include/x/vision/: camera.h  feature.h  tiled_image.h  track.h  tracker.h  triangulation.h  types.h
src/x/camera_models/: camera_equidistant.cpp  camera_fov.cpp  camera_model.cpp  camera_none.cpp  camera_radtan.cpp
src/x/ekf/: ci.cpp  ekf.cpp  propagator.cpp  simple_state.cpp  state.cpp  state_buffer.cpp  updater.cpp
src/x/photometric_calibration/: irPhotoCalib.cpp
src/x/place_recognition/: database.cpp  keyframe.cpp  place_recognition.cpp  vlad.cpp
src/x/vio/: msckf_slam_update.cpp  msckf_update.cpp  multi_slam_update.cpp  slam_update.cpp  state_manager.cpp  track_manager.cpp  vio.cpp  vio_updater.cpp
src/x/vision/: camera.cpp  feature.cpp  tiled_image.cpp  track.cpp  tracker.cpp  triangulation.cpp
